@@ -1,3 +1,8 @@
+2007-05-07  Hans Boehm <Hans.Boehm@hp.com>
+
+	* pthread_stop_world.c (GC_push_all_stacks): Print thread count with
+	GC_PRINT_VERBOSE_STATS.
+
 2007-05-01  Hans Boehm <Hans.Boehm@hp.com>
 		(and Manuel Serrano, Craig McDaniel)
 
